# mabi-pack2-uwu

./: .gitignore  Cargo.toml  README.md  salt_keys.example.json
package/: example_69.it
scripts/: add_unlimitedsight.py  ani_analyze_structure.py  ani_bruteforce_scale.py  ani_corrupt_test.py  ani_dump_floats.py  ani_frequency_analysis.py  ani_frequency_scale.py  ani_inspect_tracks.py  ani_range_scale.py  ani_scale_shorts.py  ani_scan_sequences.py  ani_speed_experiment.py  ani_speedup_bruteforce.py  ani_surgical_scale.py  compare_rgn_detailed.py  compare_rgns.py  compare_zbrizoom_dirs.py  patch_rgn.py  patch_rgn_zoom_generic.py  verify_patch.py
src/: common.rs  encryption.rs  extract.rs  gui_main.rs  list.rs  main.rs  pack.rs  salt_discovery.rs  snow2.h  snow2_fast.c  snow2tab.h
