[package]
name = "mabi-pack2"
version = "1.3.1"
authors = ["regomne <fallingsunz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
byteorder = "1"
byte-slice-cast = "1"
regex = "1"
anyhow = "1"
miniz_oxide = "0"
walkdir = "2"
eframe = "0.27"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[[bin]]
name = "mabi-pack2"
path = "src/main.rs"

[[bin]]
name = "mabi-pack2-gui"
path = "src/gui_main.rs"
